--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="ownMusicButton">Take your own music</string>
     <string name="ownMusicSearchText">Search your music</string>
     <string name="youtubeMusicSearchText">Search youtube music</string>
+    <string name="dialogHeader">Be careful!</string>
+
 </resources>
