--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">musicapp</string>
-    <string name="logo">Compact Music creator</string>
-    <string name="alreadyRecordTracks">Already recording tracks</string>
+    <string name="logo" translatable="false">Compact Music creator</string>
+    <string name="alreadyRecordTracks">Already recorded tracks</string>
     <string name="ownMusicButton">Take your own music</string>
     <string name="ownMusicSearchText">Search your music</string>
     <string name="youtubeMusicSearchText">Add your youtube link </string>
     <string name="dialogHeader">Be careful!</string>
     <string name="dialogWarning">Due to the fact that you have not given permission to use your files or voice recordings, the application will not be able to perform all the functionality. If you want to fix it, click the button below.</string>
-    <string name="permissionRequestButton">Request permission!</string>
+    <string name="permissionRequestButton">Request permission</string>
     <string name="SearchText">Search your song</string>
     <string name="ownSongName">Name of your song</string>
     <string name="startRecordButton">Press to start record</string>
@@ -27,4 +27,5 @@
     <string name="logOutTxt">Logout</string>
     <string name="singInWithGoogleButton">Sing in with Google</string>
     <string name="headphonesWarningText">For the best recording, put on headphones if possible.</string>
+    <string name="goBackButton">Go back</string>
 </resources>
