--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -33,4 +33,5 @@
     <string name="enter">продовжити</string>
     <string name="resetEmailDialogTxt">Перевірте свою електронну пошту, щоб відновити пароль</string>
     <string name="verificationEmail">"Будь ласка, перевірте свою електронну пошту, щоб підтвердити свій обліковий запис! "</string>
+    <string name="internetConnectionDialogTxt">Ви не підключені до Інтернету! Будь ласка, підключіть Інтернет.</string>
 </resources>
