--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="enter">Enter</string>
     <string name="resetEmailDialogTxt">Check your email to reset your password</string>
     <string name="verificationEmail">Please check your email to verified your account!</string>
+    <string name="internetConnectionDialogTxt">You are not connected to the Internet! Please connect to the Internet.</string>
 </resources>
