--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -34,7 +34,7 @@
     <string name="resetEmailDialogTxt">Перевірте свою електронну пошту, щоб відновити пароль</string>
     <string name="verificationEmail">"Будь ласка, перевірте свою електронну пошту, щоб підтвердити свій обліковий запис! "</string>
     <string name="internetConnectionDialogTxt">Ви не підключені до Інтернету! Будь ласка, підключіть Інтернет.</string>
-    <string name="listIsEmpty">У вас ще немає записаних треків</string>
+    <string name="listIsEmpty">Ваш список музики порожній</string>
     <string name="buttonHint">Тут будуть ваши записані треки</string>
     <string name="searchFileManually">Пошук файлу вручну</string>
 </resources>
